--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
-     <audio src="http://50.22.218.101:38838/;steam.mp3" id="audio" 
+     <audio src="https://iplock.weebly.com/uploads/9/5/7/3/95731436/wilson__expensive_mistakes_.mp3" id="audio" 
      controls>HTML5 Audio element not supported</audio>
      <canvas id="canvas" width="800" height="350"></canvas>
      <script src="main.js"></script>
