--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="wrapper">
             <div id="fileWrapper" class="file_wrapper">
                 <label for="uploadedFile">Drag & drop or select a file to play:</label>
-                <input type="file" id="uploadedFile"></input>
+                <input type="file" id="uploadedFile">
             </div>
             <div id="visualizer_wrapper">
 
